[package]
name = "open_tanktrouble"
description = "An open-source replica of a party game called Tanktrouble."
version = "0.1.0"
authors = ["Tnze <cjd001113@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Tnze/OpenTanktrouble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16"
specs-derive = "0.4"

vulkano = "0.20"
vulkano-win = "0.20"
vulkano-shaders = "0.20"
winit = "0.24"

gilrs = "0.8"
rapier2d = { version = "0.4.2", features = ["enhanced-determinism"] }
cgmath = "0.18"
