[package]
name = "open_tanktrouble"
description = "An open-source replica of A party game called Tanktrouble."
version = "0.1.0"
authors = ["Tnze <cjd001113@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Tnze/OpenTanktrouble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
crossbeam-channel = "0.5.0"
log = "0.4"
env_logger = "0.8"
itertools = "0.10"

wgpu = "0.6"
bytemuck = { version = "1.5.0", features = ["derive"] }
winit = "0.24"
msgbox = "0.6.0"

gilrs = "0.8"
rapier2d = { version = "0.5", features = ["simd-stable", "parallel"] }
cgmath = "0.18"
rand = "0.8"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
rayon = "1.4"
glob = "0.3"
shaderc = "0.6"